--- a/css/style.css
+++ b/css/style.css
@@ -8,17 +8,18 @@
 /*Defautls*/
 html,body {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: rgb(39, 39, 39);
 }
 
 /*Utility Classes*/
 
 .container {
-    min-width: 375px;
+    max-width: 400px;
     margin: auto;
     position: relative;
     align-items: center;
+    background-color: rgb(39, 39, 39);
 }
+
 
 .row {
     display: flex;
@@ -63,14 +64,13 @@ html,body {
 
 /*Nav bar*/
 
-#nav-id {
-    position: sticky;
-}
-
 .nav-bar {
     width: 100%;
     height: 65px;
     background-color: rgb(245, 130, 145);
+    top: 0;
+    position: sticky;
+    margin-bottom: 10px;
 }
 
 .nav-bar ul li {
@@ -82,10 +82,12 @@ html,body {
     text-decoration: none;
     text-align: center;
     color:rgb(80, 80, 80);
+    display: block;
 }
 
 .nav-bar ul li a i {
     font-size: 30px;
     text-align: center;
-    padding:16px 25px;
+    padding-top: 16px;
+    padding-left: 40px;
 }
