--- a/css/style.css
+++ b/css/style.css
@@ -16,6 +16,12 @@ p,h1,h2,h3,h4,h5,h6 {
 
 /*Utility Classes*/
 
+.header {
+    top: 0;
+    position: sticky;
+    background-color: rgb(39, 39, 39);
+}
+
 .container {
     max-width: 600px;
     margin: auto;
@@ -23,7 +29,6 @@ p,h1,h2,h3,h4,h5,h6 {
     align-items: center;
     background-color: rgb(39, 39, 39);
 }
-
 
 .ad-mockup {
     width: 70%;
@@ -57,6 +62,12 @@ p,h1,h2,h3,h4,h5,h6 {
     color: rgb(226, 213, 213);
 }
 
+.search-btn {
+    background-color: rgb(233, 70, 91);
+    border: none;
+    padding:12px;
+}
+
 
 .card {
     width: 90%;
@@ -76,6 +87,27 @@ p,h1,h2,h3,h4,h5,h6 {
 .card-content img{
     width: 90%;
     align-self: center;
+}
+
+/*Search bar*/
+
+.search{
+    width: 90%;
+    margin: auto;
+}
+
+.search input:first-child {
+    width:60%;
+    height: 40px;
+    margin-left: 28px;
+}
+
+@media (min-width: 500px){
+    .search input:first-child {
+        width:80%;
+        height: 40px;
+        margin-left: 20px;
+    }
 }
   
 /*speed-dials*/
